src/objects/Courier1__Recipient__c.object
<CustomObject>
    <description>Stores the list of recipients for Courier Schedules</description>
    <fields>
        <fullName>Courier1__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courier1__Courier_Schedule__c</fullName>
        <description>The Courier Schedule record to which this recipient is associated.</description>
        <inlineHelpText>Select the Courier Schedule to which this recipient is associated.</inlineHelpText>
        <label>Courier Schedule</label>
        <referenceTo>Courier1__Courier_Schedule__c</referenceTo>
        <relationshipName>Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Courier1__Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Group__c</fullName>
        <label>Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Name__c</fullName>
        <formula>IF( IsPickVal( Courier1__Type__c , &quot;Contact&quot;), Courier1__Contact_Name__c ,
IF( IsPickVal( Courier1__Type__c , &quot;User&quot;), Courier1__User_Name__c ,
IF( IsPickVal( Courier1__Type__c , &quot;Profile&quot;), Courier1__Profile_Name__c ,
IF( IsPickVal( Courier1__Type__c , &quot;Group&quot;), Courier1__Group_Name__c ,
IF( IsPickVal( Courier1__Type__c, &quot;Report&quot;), Courier1__Report_Name__c ,
IF( IsPickVal( Courier1__Type__c , &quot;Role&quot;), Courier1__Role_Name__c , null
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Profile__c</fullName>
        <label>Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report__c</fullName>
        <label>Report</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Role__c</fullName>
        <label>Role</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <displayFormat>CCR- {0000000}</displayFormat>
        <label>Recipient Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>